Add member management functionality with dry-run support
- Implemented `add_members.py` to facilitate adding members to HuntStand hunt areas using CSV files.
- Features include cookie-based authentication, optional login fallback, role management, and structured logging.
- Added dry-run mode to preview planned additions without making network calls.
- Created unit tests for dry-run functionality to ensure no output files are generated during dry runs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "huntstand-exporter"
-version = "0.2.0"
+version = "0.3.0"
 description = "CLI tool to export HuntStand hunt area membership data (members, invites, requests) to CSV/JSON."
 authors = [ { name = "Anthony Pinto" } ]
 license = { file = "LICENSE" }
@@ -44,6 +44,7 @@ dev = [
 
 [project.scripts]
 huntstand-exporter = "huntstand_exporter.exporter:main"
+huntstand-add-members = "huntstand_exporter.add_members:main"
 
 [build-system]
 requires = ["setuptools>=68.0.0", "wheel"]
